refactor(upstream): replaces deprecated constructor